<resources>
    <string name="app_name">GVCall</string>
    <string name="password">Password</string>
    <string name="gv_call">GV Call</string>
    <string name="email_address">Email Address</string>
    <string name="create_account">Create Account</string>
    <string name="already_have_an_account">Already have an Account</string>
    <string name="name">Full Name</string>
    <string name="login">Login</string>
    <string name="home">Home</string>
    <string name="history">History</string>
    <string name="logout">Logout</string>
    <string name="setting">Setting</string>
    <string name="textview">TextView</string>
    <string name="code">Code</string>
    <string name="please_share_channel_code_with_you_friend_to_join_video_call">Please Share Channel Name with you Friend to join Video Call</string>
    <string name="button">Button</string>
    <string name="join">Join</string>
    <string name="share">Share</string>
    <string name="channel_code">Enter Channel Name</string>
    <string name="todo">TODO</string>
</resources>